force-app/main/default/objects/MassUploadExternalIdRecords__c/MassUploadExternalIdRecords__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use to Map External Id of Objects used while uploading csv files through MASS Upload CSV Module</description>
    <label>MassUploadExternalIdRecords</label>
</CustomObject>