force-app/main/default/objects/MassUploadExternalIdRecords__c/fields/csvFieldDepot__c.field-meta.xml
<CustomField>
    <fullName>csvFieldDepot__c</fullName>
    <description>Headers of Actual CSV Files</description>
    <inlineHelpText>Depot use in Margin Block to bring Div,DC,Salesorg from Sales_Area_Configuration__c</inlineHelpText>
    <label>csvFieldDepot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>