force-app/main/default/objects/MassUploadExternalIdRecords__c/fields/CSVFields__c.field-meta.xml
<CustomField>
    <fullName>CSVFields__c</fullName>
    <label>CSVFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>