force-app/main/default/objects/MassUploadExternalIdRecords__c/fields/FieldUseInCombinationKey__c.field-meta.xml
<CustomField>
    <fullName>FieldUseInCombinationKey__c</fullName>
    <description>Field used in combination Key by semicolon separator</description>
    <label>FieldUseInCombinationKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>