force-app/main/default/objects/MassUploadExternalIdRecords__c/fields/isRecordType__c.field-meta.xml
<CustomField>
    <fullName>isRecordType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRecordType</label>
    <type>Checkbox</type>
</CustomField>