force-app/main/default/objects/MassUploadExternalIdRecords__c/fields/OriginalCSVField__c.field-meta.xml
<CustomField>
    <fullName>OriginalCSVField__c</fullName>
    <description>Used for fetching Fields from SalesAreaConfig</description>
    <label>OriginalCSVField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>