force-app/main/default/objects/MassUploadExternalIdRecords__c/fields/TypeApiName__c.field-meta.xml
<CustomField>
    <fullName>TypeApiName__c</fullName>
    <label>TypeApiName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>